	   mappings.add(...,
               { arg: true, count: true, motion: true, route: true });
...................................
    * IMPORTANT: shifted key notation now matches Vim's behaviour. E.g. <C-a>
      and <C-A> are equivalent, to map the uppercase character use <C-S-A>.
      (this might change again, as this is REALLY inconsistent, and i don't
       know if I like copying bugs)

    * add [c]:keepalt[c]
    * add [c]:styledisable[c], [c]:styleenable[c], and [c]:styletoggle[c]
    * add [c]:sanitize[c], 'sanitizetimespan' and 'sanitizeitems'
    * add [c]:verbose[c]
    * add [c]:window[c] to run a command in a new window
    * add ! version of [c]:delbmarks[c] to delete all bookmarks
    * new "t" option for 'complete' to also switch to open tabs with :open
    * add [c]:toolbaropen[c], [c]:toolbarclose[c], and [c]:toolbartoggle[c]
    * make [c]:open[c] behavior match that of [c]:tabopen[c] and [c]:winopen[c]
      when no argument is specified
    * add extension related commands - [c]:extadd[c], [c]:extdelete[c],
      [c]:extdisable[c], [c]:extenable[c], [c]:extensions[c], [c]:extoptions[c]
    * add *-javascript* flag to [c]:autocommand[c]
    * add 'private' - enter private browsing mode, matching *PrivateMode*
      autocommand
    * add *-description* option to [c]:command[c]
    * command-line options are now supported via the host application's
      *-liberator* option
    * add [m];i[m] and [m];I[m] for opening image location (in new tab)
    * add [j]all.html[j] to show all help sections in a single page - available via
      [c]:helpall[c]
    * add [m];c[m] extended hint mode - open the context menu
    * add [m]@:[m] mapping - repeat the last Ex command
    * add [m]\[m] mapping - toggle between rendered and source view

2009-05-21:
    * version 2.1
    * IMPORTANT: Default value of 'complete' has been changed from "sfl" to "slf"
    * massively speed up [c]:open[c] completions